err/importdoctor.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ImportDoctor'...
Compiling './lib/python3.5/site-packages/ImportDoctor/__init__.py'...
***   File "./lib/python3.5/site-packages/ImportDoctor/__init__.py", line 119
    print 'Queue is empty. Nothing to sort.'
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ImportDoctor/doctor_base.py'...
***   File "./lib/python3.5/site-packages/ImportDoctor/doctor_base.py", line 93
    print 'Critical variable ({}) modified. Resetting Queue.'.format(func.__name__)
                                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ImportDoctor/util'...
Compiling './lib/python3.5/site-packages/ImportDoctor/util/test_battery.py'...
***   File "./lib/python3.5/site-packages/ImportDoctor/util/test_battery.py", line 21
    print 'Testing regex on line: ' + line
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ImportDoctor-1.2.2.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
